--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:id="@+id/nav_graph">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/main_fragment">
+
+    <fragment
+        android:id="@+id/main_fragment"
+        android:name="com.nascimentofe.googledevelopercertification.presentation.ui.main.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main">
+        <action
+            android:id="@+id/main_to_toast_snake_fragment"
+            app:destination="@id/toast_snake_fragment"
+            app:popUpTo="@id/main_fragment" />
+        <action
+            android:id="@+id/main_to_notification_fragment"
+            app:destination="@id/notification_fragment"
+            app:popUpTo="@id/main_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/toast_snake_fragment"
+        android:name="com.nascimentofe.googledevelopercertification.presentation.ui.toast_snake.ToastSnakeFragment"
+        android:label="fragment_toast_snake"
+        tools:layout="@layout/fragment_toast_snake" />
+    <fragment
+        android:id="@+id/notification_fragment"
+        android:name="com.nascimentofe.googledevelopercertification.presentation.ui.notifications.NotificationFragment"
+        android:label="fragment_notification"
+        tools:layout="@layout/fragment_notification" />
+
 
 </navigation>
